--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Sun Jul 21 11:34:11 BDT 2013
+#Thu Jul 25 15:11:30 BDT 2013
 app.grails.version=1.3.3
 app.name=digitalfiling
 app.servlet.version=2.4
 app.version=0.1
+plugins.export=1.1
 plugins.hibernate=1.3.3
 plugins.tomcat=1.3.3
