--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,10 @@
 #Grails Metadata file
-#Thu Jul 25 15:11:30 BDT 2013
+#Fri Jul 26 01:05:56 BDT 2013
 app.grails.version=1.3.3
 app.name=digitalfiling
 app.servlet.version=2.4
 app.version=0.1
 plugins.export=1.1
 plugins.hibernate=1.3.3
+plugins.richui=0.8
 plugins.tomcat=1.3.3
